@@ -1,3 +1,4 @@
+// com.securevote.securevotebackend.Dto.ElectionResponseDto.java
 package com.securevote.securevotebackend.Dto;
 
 import com.securevote.securevotebackend.Entity.Election;
@@ -6,7 +7,9 @@ import lombok.Data;
 import lombok.NoArgsConstructor;
 
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Data
 @NoArgsConstructor
@@ -24,27 +27,35 @@ public class ElectionResponseDto {
     private List<CandidateResponseDto> candidates;
     private Long totalVotes;
 
-    public static ElectionResponseDto fromElection(Election election) {
-        ElectionResponseDto dto = new ElectionResponseDto();
-        dto.setId(election.getId());
-        dto.setTitle(election.getTitle());
-        dto.setDescription(election.getDescription());
-        dto.setStartTime(election.getStartTime());
-        dto.setEndTime(election.getEndTime());
-        dto.setContractAddress(election.getContractAddress());
-        dto.setStatus(election.getStatus());
-        dto.setCreatedAt(election.getCreatedAt());
-        dto.setCreatedBy(election.getCreatedBy() != null ? UserResponseDto.fromUser(election.getCreatedBy()) : null);
+    public ElectionResponseDto(Election election) {
+        this.id = election.getId();
+        this.title = election.getTitle();
+        this.description = election.getDescription();
+        this.startTime = election.getStartTime();
+        this.endTime = election.getEndTime();
+        this.contractAddress = election.getContractAddress();
+        this.status = election.getStatus();
+        this.createdAt = election.getCreatedAt();
 
+        // Map createdBy to DTO using only id and walletAddress
+        if (election.getCreatedBy() != null) {
+            this.createdBy = new UserResponseDto(election.getCreatedBy());
+        }
+
+        // Map candidates to DTOs (assuming CandidateResponseDto is defined)
         if (election.getCandidates() != null) {
-            dto.setCandidates(election.getCandidates().stream()
-                    .map(CandidateResponseDto::fromCandidate)
-                    .toList());
+            this.candidates = election.getCandidates().stream()
+                    .map(CandidateResponseDto::new)
+                    .collect(Collectors.toList());
+        } else {
+            this.candidates = Collections.emptyList();
         }
 
         // Calculate total votes
-        dto.setTotalVotes(election.getVotes() != null ? (long) election.getVotes().size() : 0L);
-
-        return dto;
+        if (election.getVotes() != null) {
+            this.totalVotes = (long) election.getVotes().size(); // Use size() for performance
+        } else {
+            this.totalVotes = 0L;
+        }
     }
 }
